Adding permission `funnymigrator.use` to plugin.yml

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -10,6 +10,7 @@ permissions:
         children:
             funnyguilds.player: true
             funnyguilds.admin: true
+            funnymigrator.use: true
     funnyguilds.admin:
         default: op
         children:
