--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -1,5 +1,5 @@
 # <------- FunnyGuilds Version -------> #
-version: '3.0 Christmas'
+version: '3.9.9.9 Cleaned'
 
 # <------- Permission Messages -------> #
 permission: '&cNie masz wystarczajacych uprawnien do uzycia tej komendy!'
