Some fixes in MySQL and Configuration (#405)

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -318,11 +318,11 @@ data-type:
   mysql: false
 # Dane wymagane do polaczenia z baza
 mysql:
-  hostname: "localhost"
+  hostname: localhost
   port: 3306
-  database: "db"
-  user: "root"
-  password: "passwd"
+  database: db
+  user: root
+  password: passwd
   poolSize: 16
   
 # Config Version
