--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,6 @@ local.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Personal debugging stuff
+debugging/
