--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,14 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <relocations>
+                        <relocation>
+                            <pattern>com.google.common.</pattern>
+                            <shadedPattern>net.dzikoysk.funnyguilds.libs.com.google.common</shadedPattern>
+                        </relocation>
+                    </relocations>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
