Travis improvements & remove mikeprimm repo.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: java
+sudo: required
 jdk:
 - oraclejdk8
+install: true
+script:
+- sudo apt-get update && sudo apt-get install oracle-java8-installer
+- sudo apt install oracle-java8-set-default
+- java -version
+- mvn validate
+- mvn clean test
