--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <name>FunnyGuilds</name>
     <groupId>net.dzikoysk</groupId>
     <artifactId>funnyguilds</artifactId>
-    <version>4.0-SNAPSHOT</version>
+    <version>4.0.0.0</version>
     <packaging>jar</packaging>
 
     <distributionManagement>
