--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,11 @@
 name: FunnyGuilds
 main: net.dzikoysk.funnyguilds.FunnyGuilds
 version: '${project.version}-${git.commit.id.abbrev}'
-author: Dzikoysk
-website: http://www.dzikoysk.net/
-loadbefore: [WorldEdit]
-softdepend: [WorldGuard]
+author: dzikoysk
+authors: ['kacperduras', 'insertt']
+website: https://www.dzikoysk.net/
+loadbefore: [WorldEdit, WorldGuard]
+
 permissions:
     funnyguilds.*:
         default: op
@@ -40,6 +41,7 @@ permissions:
             funnyguilds.deputy: true
             funnyguilds.ranking: true
             funnyguilds.manage: true
+            funnyguilds.items: true
     funnyguilds.reload:
         default: op
     funnyguilds.admin.build:
@@ -83,4 +85,6 @@ permissions:
     funnyguilds.manage:
         default: true
     funnyguilds.ranking:
+        default: true
+    funnyguilds.items:
         default: true
