--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: FunnyGuilds
 main: net.dzikoysk.funnyguilds.FunnyGuilds
-version: '${project.version}-${git.commit.id.abbrev}'
+version: '${project.version} Tribute-${git.commit.id.abbrev}'
 author: dzikoysk
 authors: ['kacperduras', 'insertt']
 website: https://www.dzikoysk.net/
