--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,8 @@ matrix:
           packages:
             - oracle-java9-installer
 
+after_success:
+  - mvn clean test jacoco:report coveralls:report
+
 notifications:
   email: false
