Possibility of disabling required rank system, and separate funnyguilds.vip permissions.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -42,6 +42,11 @@ permissions:
             funnyguilds.ranking: true
             funnyguilds.manage: true
             funnyguilds.items: true
+    funnyguilds.vip:
+        default: op
+        children:
+            funnyguilds.vip.items: true
+            funnyguilds.vip.rank: true
     funnyguilds.reload:
         default: op
     funnyguilds.admin.build:
