--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.panda_lang</groupId>
+            <groupId>org.panda-lang</groupId>
             <artifactId>panda</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>indev-0.5.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
