Add missing permissions to default permissions given to player (closes #818).
Signed-off-by: insertt <inserttdev@gmail.com>

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -42,6 +42,8 @@ permissions:
             funnyguilds.ranking: true
             funnyguilds.manage: true
             funnyguilds.items: true
+            funnyguilds.escape: true
+            funnyguilds.rankreset: true
     funnyguilds.vip:
         default: op
         children:
