--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>21.0</version>
+            <version>24.1-jre</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -72,13 +72,13 @@
         <dependency>
             <groupId>me.clip</groupId>
             <artifactId>placeholderapi</artifactId>
-            <version>2.8.4</version>
+            <version>2.8.5</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>codecrafter47.bungeetablistplus</groupId>
             <artifactId>bungeetablistplus-api-bukkit</artifactId>
-            <version>2.8.3</version>
+            <version>2.8.4-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
@@ -105,6 +105,11 @@
         <repository>
             <id>codecrafter47-repo</id>
             <url>http://nexus.codecrafter47.de/content/repositories/public/</url>
+        </repository>
+        <repository>
+            <id>mvdw-software</id>
+            <name>MVdW Public Repositories</name>
+            <url>http://repo.mvdw-software.be/content/groups/public/</url>
         </repository>
     </repositories>
 
