Travis improvements * Drop Java 9 support (move these build to `allow_failures` secton); * Add script for setup the newers Java version (JDK 10 and 11); * Add builds for JDK 10 (stable) and 11 (experimental); * Disable `fast_finish` option; * Select `dist` to `trusty`; * Some refactoring.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,20 @@
 language: java
 sudo: required
+dist: trusty
 
-install: script/ciinstall
-script: script/ciscript
+install: script/install
+script: script/script
 
 matrix:
-  fast_finish: true
+  fast_finish: false
   include:
-    - jdk: oraclejdk8
-    - jdk: oraclejdk9
-      addons:
-        apt:
-          packages:
-            - oracle-java9-installer # https://docs.travis-ci.com/user/languages/java/#Updating-Oracle-JDK-to-a-recent-release
-  allow_failures:
+    - jdk: oraclejdk8 # available in Travis CI
     - jdk: oraclejdk10
-      addons:
-        apt:
-          packages:
-            - oracle-java10-installer # https://docs.travis-ci.com/user/languages/java/#Updating-Oracle-JDK-to-a-recent-release
+      install: script/setup F 10 -L BCL
+  allow_failures:
+    - jdk: oraclejdk9 # available in Travis CI
+    - jdk: oraclejdk11
+      install: script/setup -F 11 -L BCL
 
 notifications:
   email: false
