--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
     - env: JDK='Oracle JDK 9'
       jdk: oraclejdk9
     - env: JDK='Oracle JDK 10'
-      install: script/setup F 10 -L BCL
+      install: script/setup F 10
     - env: JDK='Oracle JDK 11'
       install: script/setup F 11 -L BCL
   allow_failures:
