Fix issues with effective FunnyTab obsolescence

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ main: net.dzikoysk.funnyguilds.FunnyGuilds
 version: '${project.version} Tribute-${git.commit.id.abbrev}'
 author: 'FunnyGuilds Team'
 website: https://github.com/FunnyGuilds
-softdepend: [WorldEdit, Vault, PlaceholderAPI, BungeeTabListPlus]
+softdepend: [WorldEdit, Vault, PlaceholderAPI, BungeeTabListPlus, FunnyTab]
 loadbefore: [WorldGuard]
 
 permissions:
