Change target file names for jar download simplicity

--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,7 @@
 
     <build>
         <defaultGoal>clean install</defaultGoal>
+        <finalName>${project.name} ${project.version}-${git.commit.id.abbrev} (src)</finalName>
 
         <resources>
             <resource>
@@ -146,6 +147,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <finalName>${project.name} ${project.version}-${git.commit.id.abbrev}</finalName>
                     <relocations>
                         <relocation>
                             <pattern>com.google.common.</pattern>
