--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
             <version>2.8.5</version>
             <scope>provided</scope>
         </dependency>
+        <dependency> 
+            <groupId>codecrafter47.bungeetablistplus</groupId> 
+            <artifactId>bungeetablistplus-api-bukkit</artifactId>  
+            <version>2.8.4-SNAPSHOT</version>  
+            <scope>provided</scope>  
+        </dependency>
         <dependency>
             <groupId>be.maximvdw</groupId>
             <artifactId>MVdWPlaceholderAPI</artifactId>
@@ -109,6 +115,10 @@
         <repository>
             <id>placeholderapi</id>
             <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+        </repository>
+        <repository> 
+            <id>codecrafter47-repo</id>  
+            <url>http://nexus.codecrafter47.de/content/repositories/public/</url>  
         </repository>
         <repository>
             <id>mvdw-software</id>
