Allow interaction with certain blocks in guild region, close #734

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -19,6 +19,7 @@ permissions:
         children:
             funnyguilds.reload: true
             funnyguilds.admin.build: true
+            funnyguilds.admin.interact: true
             funnyguilds.admin.notification: true
 
     funnyguilds.vip:
