--- a/pom.xml
+++ b/pom.xml
@@ -35,11 +35,29 @@
             <version>25.1-jre</version>
             <scope>compile</scope>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
             <version>1.8.8-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>-->
+        <dependency>
+            <groupId>org.bukkit</groupId>
+            <artifactId>bukkit</artifactId>
+            <version>1.13-pre7-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+           <groupId>org.apache.commons</groupId>
+           <artifactId>commons-lang3</artifactId>
+           <version>3.0</version>
+           <scope>provided</scope>
+        </dependency>
+        <dependency>
+           <groupId>io.netty</groupId>
+           <artifactId>netty-all</artifactId>
+           <version>4.1.27.Final</version>
+           <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.sk89q.worldguard</groupId>
@@ -98,6 +116,10 @@
     </dependencies>
 
     <repositories>
+        <repository>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+        </repository>
         <repository>
             <id>panda-repository</id>
             <name>Panda Repository</name>
@@ -171,7 +193,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <finalName>${project.name} ${project.version}</finalName>
+                    <finalName>${project.name} ${project.version} (MC 1.13 ALPHA)</finalName>
                     <relocations>
                         <relocation>
                             <pattern>com.google.common.</pattern>
