Start MC 1.13 BETA

--- a/pom.xml
+++ b/pom.xml
@@ -35,12 +35,6 @@
             <version>25.1-jre</version>
             <scope>compile</scope>
         </dependency>
-        <!--<dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>craftbukkit</artifactId>
-            <version>1.8.8-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>-->
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
@@ -193,7 +187,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <finalName>${project.name} ${project.version} (MC 1.13 ALPHA)</finalName>
+                    <finalName>${project.name} ${project.version} (MC 1.13 BETA)</finalName>
                     <relocations>
                         <relocation>
                             <pattern>com.google.common.</pattern>
