--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
         <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
-           <version>4.1.28.Final</version>
+           <version>4.1.29.Final</version>
            <scope>provided</scope>
         </dependency>
         <dependency>
@@ -86,7 +86,7 @@
         <dependency>
             <groupId>me.clip</groupId>
             <artifactId>placeholderapi</artifactId>
-            <version>2.9.1</version>
+            <version>2.9.2</version>
             <scope>provided</scope>
         </dependency>
         <dependency> 
@@ -187,7 +187,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <finalName>${project.name} ${project.version} (MC 1.13 BETA)</finalName>
+                    <finalName>${project.name} ${project.version} (MC 1.8-1.13)</finalName>
                     <relocations>
                         <relocation>
                             <pattern>com.google.common.</pattern>
