Ignore openjdk10 builds by Travis due to unavailability of the services

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ matrix:
     - jdk: openjdk-ea
   allow_failures:
     - jdk: openjdk9
+    - jdk: openjdk10
     - jdk: openjdk11
     - jdk: openjdk-ea
 
